"1. the foundation of engx" changed "2. development" added

--- a/docs/engx/1. The Foundation of EngX .md
+++ b/docs/engx/1. The Foundation of EngX .md
@@ -3,6 +3,7 @@
 <!--
 tags: [EngX]
 -->
+
 - [The Foundation of EngX](#the-foundation-of-engx)
   - [Introduction to the Foundation of EngX](#introduction-to-the-foundation-of-engx)
   - [Agile Fundamentals](#agile-fundamentals)
@@ -27,9 +28,9 @@ tags: [EngX]
       - [Sprint Review](#sprint-review)
       - [Sprint Retrospective](#sprint-retrospective)
     - [Three Pillars of Scrum](#three-pillars-of-scrum)
-      - [Transparency \\ Прозрачность](#transparency--прозрачность)
-      - [Inspection \\ Осмотр, Инспекция](#inspection--осмотр-инспекция)
-      - [Adaptation \\ Адаптация](#adaptation--адаптация)
+      - [Transparency](#transparency)
+      - [Inspection](#inspection)
+      - [Adaptation](#adaptation)
     - [Tips for Implementing Scrum](#tips-for-implementing-scrum)
   - [Best Practices for Agile](#best-practices-for-agile)
   - [The EngX Culture](#the-engx-culture)
@@ -47,10 +48,10 @@ tags: [EngX]
     - [Implementing the Key Principles with CI/CD](#implementing-the-key-principles-with-cicd)
       - [Continuous Integration](#continuous-integration)
       - [Continuous Delivery](#continuous-delivery)
-    - [Taking an Agile Approach to a Software Development Project](#taking-an-agile-approach-to-a-software-development-project)
-  - [The Development Phase](#the-development-phase)
-  - [The Testing Phase](#the-testing-phase)
-    - [Pre-Testing Activities](#pre-testing-activities)
+  - [Taking an Agile Approach to a Software Development Project](#taking-an-agile-approach-to-a-software-development-project)
+    - [The Development Phase](#the-development-phase)
+    - [The Testing Phase](#the-testing-phase)
+      - [Pre-Testing Activities](#pre-testing-activities)
   - [Best Practices for Ensuring Agility of Your Project](#best-practices-for-ensuring-agility-of-your-project)
 
 ## Introduction to the Foundation of EngX
@@ -88,7 +89,7 @@ Although traditional approaches to development, like the waterfall methodology, 
 
 ### Elements of Agile Development
 
-The Agile philosophy emphasizes
+The Agile philosophy emphasizes:
 
 - quick releases,
 - flexible planning,
@@ -97,7 +98,7 @@ The Agile philosophy emphasizes
 - and ongoing feedback from users.
 Agility empowers your team to experiment and adapt to change quickly.
 
-Философия Agile делает упор на
+Философия Agile делает упор:
 
 - быстрые релизы,
 - гибкое планирование,
@@ -154,7 +155,6 @@ That is, while there is value in the items on the right, we value the items on t
 - Рабочее программное обеспечение приоритетнее исчерпывающей документации.
 - Сотрудничество с клиентами приоритетнее условий по контракту.
 - Реагирование на изменения приоритетнее соблюдения плана.
-
 То есть, в то время как элементы справа имеют ценность, мы больше ценим элементы слева.
 
 These values—or shared beliefs—establish a shared vision for your team, while the principles describe goals and standards for Agile work.
@@ -174,13 +174,13 @@ The following [12 Principles](https://www.agilealliance.org/agile101/12-principl
 7. Working software is the primary measure of progress. — Работающее программное обеспечение - это основной показатель прогресса.
 8. Agile processes promote sustainable development. The sponsors, developers, and users should be able to maintain a constant pace indefinitely. — Гибкие процессы способствуют устойчивому развитию. Спонсоры, разработчики и пользователи должны иметь возможность поддерживать постоянный темп до бесконечности.
 9. Continuous attention to technical excellence and good design enhances agility. — Постоянное внимание к техническому совершенству и хорошему дизайну повышает маневренность, гибкость.
-10. Simplicity[^1] — the art of maximizing the amount of work not done — is essential. — Простота — искусство максимизировать объем незавершенной работы - очень важна.
+10. Simplicity — the art of maximizing the amount of work not done — is essential. — Простота — искусство максимизировать объем незавершенной работы - очень важна. См.примечание ниже.
 11. The best architectures, requirements, and designs emerge from self-organizing teams. — Лучшие архитектуры, требования и проекты создаются самоорганизующимися командами.
 12. At regular intervals, the team reflects on how to become more effective, then tunes and adjusts its behavior accordingly. — Через регулярные промежутки времени команда размышляет о том, как стать более эффективной, затем соответствующим образом настраивает и корректирует свое поведение.
 
 Together, these values and principles offer a way to organize collaboration between business and software development.
 
-[^1]: The authors of the Manifesto arrived at an idea from Lean Thinking – the idea of reducing process waste. Maximizing the amount of work not done means maximizing the amount of unnecessary work not done. — Авторы Манифеста пришли к идее бережливого мышления – идее сокращения технологических отходов. Максимальное количество невыполненной работы означает максимальное количество невыполненной ненужной работы.
+Примечание к 10му принципу: The authors of the Manifesto arrived at an idea from Lean Thinking – the idea of reducing process waste. Maximizing the amount of work not done means maximizing the amount of unnecessary work not done. — Авторы Манифеста пришли к идее бережливого мышления – идее сокращения технологических отходов. Максимальное количество невыполненной работы означает максимальное количество невыполненной ненужной работы.
 
 В совокупности эти ценности и принципы предлагают способ организации сотрудничества между бизнесом и разработчиками программного обеспечения.
 
@@ -430,19 +430,19 @@ All Scrum events support the three Scrum pillars:
 - осмотр,
 - и адаптация.
 
-#### Transparency \ Прозрачность
+#### Transparency
 
 Transparency requires all team members to be included in all activities required for a project. Events like Daily Scrums support this pillar. This pillar requires all members of the team to embrace openness and trust, while working toward a common goal.
 
 Прозрачность требует, чтобы все члены команды были вовлечены во все мероприятия, необходимые для реализации проекта. Такие мероприятия, как ежедневные Daily Scrums, поддерживают этот принцип. Этот принцип требует от всех членов команды открытости и доверия, работая над достижением общей цели.
 
-#### Inspection \ Осмотр, Инспекция
+#### Inspection
 
 Inspection ensures that teams prioritize tasks and that the product is of high quality. Events like Sprint Reviews support this pillar. This pillar requires flexibility and collaboration between the team and the customer to ensure the best possible product.
 
 Инспекция гарантирует, что команды расставляют приоритеты в задачах и что продукт отличается высоким качеством. Такие мероприятия, как Sprint Reviews, поддерживают этот принцип. Этот принцип требует гибкости и сотрудничества между командой и заказчиком для обеспечения наилучшего возможного продукта.
 
-#### Adaptation \ Адаптация
+#### Adaptation
 
 Adaptation is apparent across all Scrum events. It focuses on one of the main aspects of being Agile, which is to always be flexible to accommodate the project and customers’ needs. Any changes identified in the Inspection pillar should be accommodated during Adaptation, with continued flexibility and collaboration between the team and the customer.
 
@@ -571,6 +571,11 @@ An EngX culture provides a safe environment where all team members share a clear
 EngX is crucial to supporting agility in your projects. It also creates an environment where engineers are empowered to do their best, contribute to their team and project’s success, and constantly improve professional skills. These outcomes are essential factors that help your team deliver value to your client.
 
 EngX имеет решающее значение для поддержки гибкости в ваших проектах. Это также создает среду, в которой инженеры получают возможность делать все, что в их силах, вносить свой вклад в успех своей команды и проекта и постоянно совершенствовать профессиональные навыки. Эти результаты являются важными факторами, которые помогают вашей команде приносить пользу вашему клиенту.
+
+Альтернатива - деятельность команды не-профессионалов выглядит со стороны:
+
+- либо как короткие по времени, экзальтированные (крайне возбужденные, восторженные) скачки с бубном, которые ничем не заканчиваются; про которые все забывают, когда восторг "вот она панацея" проходит и надо начинать работать; про которые обратно вспоминают, когда сверху придет директива "срочно поднять производительность", "завтра сократить трудозатраты" и т.п.;
+- либо как подражание профессионалам, например, в виде культовых, религиозных обрядов ежедневных "митингов".
 
 ### Delivering Value to Clients
 
@@ -766,7 +771,7 @@ CI/CD воплощает в себе практическую реализаци
 
 Короче говоря, использование методов CI/CD помогает вашему проекту стать более гибким.
 
-### Taking an Agile Approach to a Software Development Project
+## Taking an Agile Approach to a Software Development Project
 
 When it comes to being responsive to business changes, an Agile approach to a software development project is much more flexible and effective than the traditional waterfall approach. The phases in a waterfall SDLC happen in a linear sequence. In contrast, an Agile SDLC might have several implementation versions. For example, the Scrum-based Agile approach has short iterations and allows several phases to happen simultaneously.
 
@@ -784,7 +789,7 @@ Applying Engineering Excellence practices, processes, and tools during the Devel
 
 Применение передовых инженерных практик, процессов и инструментов на этапах разработки и тестирования в рамках этого базового проекта имеет важное значение для успешной реализации.
 
-## The Development Phase
+### The Development Phase
 
 An Agile software development team usually conducts development and testing activities simultaneously. Pieces of code can be tested as they are completed, which provides the early feedback required to improve other development outcomes. The Development phase covers pre-coding activities, coding, and code review. Throughout this phase, a software development team is also involved in other development activities: knowledge sharing and management of technical debt.
 
@@ -801,13 +806,13 @@ To consider a coding task done, a team follows the definition of done (DoD) for 
 
 Чтобы считать задачу по кодированию выполненной, команда сверяется с DoD - набором правил, проверок и критериев качества. После того, как задача проходит проверку на соответствие DoD, фаза разработки заканчивается, и тестировщики могут приступить к проверке фрагмента кода.
 
-## The Testing Phase
+### The Testing Phase
 
 The Testing phase covers pre-testing activities, automated and manual test execution, and defect management.
 
 Этап тестирования охватывает мероприятия по предварительному тестированию, автоматизированное и ручное выполнение тестов и устранение дефектов.
 
-### Pre-Testing Activities
+#### Pre-Testing Activities
 
 Pre-testing activities start at the same time developers begin the implementation of their tasks. Using special test case management tools, software testing engineers create test cases for new functionality covering all possible business scenarios. Their goal is to help identify as many defects as possible and speed up feedback when testing.
 
