new picture added. chapter 'Building an Agile SDLC' changed. chapter 'Taking an Agile Approach to a Software Development Project' changed.

--- a/docs/engx/1. The Foundation of EngX .md
+++ b/docs/engx/1. The Foundation of EngX .md
@@ -693,19 +693,29 @@ Making your SDLC Agile will empower the team to incorporate regular client feedb
 
 Обеспечение гибкости вашего SDLC позволит команде гибко учитывать отзывы постоянных клиентов, определять приоритеты наиболее ценных функций и получать тестируемый результат. Чтобы достичь этих целей, ваша команда должна предпринять два действия.
 
-Action 1
-
-Action 2. Make changes faster without increasing costs or degrading quality.
+Action 1. Make changes faster without increasing costs or degrading quality.
 
 Your client’s primary goal is to provide a high-quality product that will increase user satisfaction, bring value as soon as possible, and help the company gain a competitive market advantage. Clients also want to keep the software development process cost-effective.
 
 Your team can help your clients reach those goals by prioritizing the introduction of changes to address any current solution gaps and improve product quality effectively. Regularly making changes saves time and money in the long run, while postponing changes can have a critical impact on your project—like having to rebuild your solution at a later stage.
 
-Действие 2. Ускоряйте внесение изменений без увеличения затрат или ухудшения качества.
+Действие 1. Ускоряйте внесение изменений без увеличения затрат или ухудшения качества.
 
 Основная цель вашего клиента - предоставить высококачественный продукт, который повысит удовлетворенность пользователей, принесет пользу в кратчайшие сроки и поможет компании получить конкурентное преимущество на рынке. Клиенты также хотят, чтобы процесс разработки программного обеспечения был экономически эффективным.
 
 Ваша команда может помочь вашим клиентам достичь этих целей, уделяя приоритетное внимание внедрению изменений для устранения любых существующих пробелов в решениях и эффективного повышения качества продукции. Регулярное внесение изменений экономит время и деньги в долгосрочной перспективе, в то время как отсрочка изменений может оказать решающее влияние на ваш проект — например, необходимость перестроить ваше решение на более позднем этапе.
+
+Action 2. Produce a potentially shippable (ready for detailed customer feedback) product increment at the end of each iteration.
+
+Regular feedback from your client is crucial to ensure that you are on the same page about solution requirements. Your client might add or modify requirements at some point, and your team must be able to adjust quickly. Your team can prepare for quick adjustments by delivering a product increment with each iteration (e.g., a new feature) that is ready for client testing and a potential release.
+
+This action is useful not only for trying out a real product with end users but also if your team needs to create a minimum viable product (MVP) to test a business idea. Engineers can use the feedback they receive on this bare minimum version for further improvement of the product.
+
+Действие 2. В конце каждой итерации создайте потенциально готовый к отправке продукт (готовый к подробной обратной связи с клиентом).
+
+Регулярная обратная связь от вашего клиента имеет решающее значение для обеспечения того, чтобы вы были на одной волне относительно требований к решению. В какой-то момент ваш клиент может добавить или изменить требования, и ваша команда должна иметь возможность быстро адаптироваться. Ваша команда может подготовиться к быстрой корректировке, предоставляя приращение продукта с каждой итерацией (например, новую функцию), готовое к тестированию клиента и потенциальному выпуску.
+
+Это действие полезно не только для опробования реального продукта с конечными пользователями, но и в том случае, если вашей команде необходимо создать минимально жизнеспособный продукт (MVP) для проверки бизнес-идеи. Инженеры могут использовать отзывы, которые они получают об этой минимальной версии, для дальнейшего улучшения продукта.
 
 These two actions are the foundation of Agile-driven software development. Taking these actions requires your team to follow certain software development principles.
 
@@ -780,6 +790,8 @@ When it comes to being responsive to business changes, an Agile approach to a so
 While it is impossible to describe a universal SDLC that reflects the specifics of every project, it is still important to imagine how a team might go through SDLC phases in terms of a timeline and iterations in every phase of a project end-to-end. The example below is based on the CI/CD approach within an Agile-driven environment. It illustrates when and how a team can implement Agile engineering practices, processes, and tools to ensure successful delivery.
 
 Хотя невозможно описать универсальный SDLC, отражающий специфику каждого проекта, все же важно представить, как команда могла бы проходить этапы SDLC с точки зрения графика и итераций на каждом этапе проекта от начала до конца. Приведенный ниже пример основан на подходе CI/CD в среде, управляемой Agile. Это иллюстрирует, когда и как команда может внедрять гибкие инженерные практики, процессы и инструменты для обеспечения успешной реализации.
+
+![This sample project is conducted using the Scrum Framework on a two-week iteration basis.jpg](<../../assets/images/This sample project is conducted using the Scrum Framework on a two-week iteration basis.jpg>)
 
 This sample project is conducted using the Scrum Framework on a two-week iteration basis. It supports the Agile principles of receiving and being able to implement valuable feedback faster. The stages the team follows are not linear—for example, when team members finish the Requirements, Design, and Planning stages and begin the Development and Testing stages for the current iteration, they also start working on the Requirements, Design, and Planning for the next iteration. Engaging in software development activities in parallel helps make your work as efficient as possible.
 
