link to 2022_state_of_devops_report added.

--- a/docs/engx/6. Five metrics of delivery and operational performance.md
+++ b/docs/engx/6. Five metrics of delivery and operational performance.md
@@ -1,5 +1,7 @@
 # Five metrics of delivery and operational performance
 
+[2022_state_of_devops_report](https://services.google.com/fh/files/misc/2022_state_of_devops_report.pdf)
+
 The four metrics of software delivery performance can be considered in terms of throughput and stability:
 
 - lead time for changes,
